# Python.SEO.Scraper

./: .dockerignore  .env.example  .gitignore  Claude.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.run/: __main__.run.xml  install-dev.run.xml  run-dev.run.xml  scrape-save.run.xml
docs/: BUSINESS.md  PYTHON.md
scripts/: test_scrape.py
src/seo_scraper/: __init__.py  __main__.py  admin.py  api.py  auth.py  auth_router.py  config.py  dashboard.py  database.py  db_models.py  gemini_client.py  jinja_env.py  logging_config.py  middleware.py  models.py  pdf_scraper.py  pipeline.py  scraper.py
src/seo_scraper/static/css/: custom.css
src/seo_scraper/static/js/: dashboard.js
src/seo_scraper/templates/: base.html  login.html
src/seo_scraper/templates/prompts/: html_sanitizer.j2  sanitizer.j2
tests/: __init__.py  conftest.py  test_api.py  test_dashboard.py  test_database.py  test_llm_sanitizer.py  test_models.py  test_pipeline.py  test_scientific_extraction.py  test_scraper.py
