[project]
name = "seo-scraper"
version = "2.0.0"
description = "Micro-service FastAPI de scraping haute performance avec Crawl4AI, support PDF et dashboard d'audit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "venantvr" }
]
keywords = ["scraping", "seo", "crawl4ai", "fastapi", "microservice", "pdf", "audit"]

dependencies = [
    "fastapi>=0.123.5",
    "uvicorn[standard]>=0.27.0",
    "crawl4ai>=0.7.7",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.26.0",
    "pymupdf>=1.24.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.6",
    "tenacity>=8.2.0",
    "python-json-logger>=2.0.0",
    # Pipeline dependencies
    "beautifulsoup4>=4.12.0",
    "lxml>=6.0.2",
    "trafilatura>=1.12.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
queue = [
    "redis>=7.1.0",
    "arq>=0.25.0",
]
encryption = [
    "sqlcipher3-binary>=0.5.0",
]
# Note: LLM features (Gemini) now use httpx REST API directly (no extra dependency)

[project.scripts]
seo-scraper = "seo_scraper.__main__:main"

[project.urls]
Homepage = "https://github.com/venantvr/Python.SEO.Scraper"
Repository = "https://github.com/venantvr/Python.SEO.Scraper"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["seo_scraper"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
seo_scraper = ["py.typed", "templates/**/*.html", "templates/**/*.j2", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | tests/samples
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["tests/samples"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "UP009", # UTF-8 encoding declaration is unnecessary (garde pour compatibilité)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
